many small tweaks to how questions are displayed including  - better title  - next button on multi question page  - separate name & code display  - clearer rows on all questions page  - alternate row coloring on all questions page  - more minor tweaks improved tooltips yet again fixed possible errors with calibration when calibration data doesn't exist or is malformed removed ugly underlines from icons removed link from guess logo (was overlapping the breadcrumbs, not really needed) added breadcrumbs to new estimate page renamed 'raw calculations' to 'current calculations'

--- a/trunk/static/shared.css
+++ b/trunk/static/shared.css
@@ -45,6 +45,18 @@ body {
 	background-color: #EEC;	
 }
 
+tr.importantcell td {
+	border-top: 1px solid black;	
+}
+
+tr.altcolor1 td {
+	background-color: #FFF;
+}
+
+tr.altcolor2 td {
+	background-color: #f0f7ff;
+}
+
 h2  {
 	margin: 0px;
 	padding: 0px;
@@ -150,7 +162,7 @@ hr {
 	border-style: none;
 	border-bottom-style: solid;
 	border-right-style: solid;
-	border-color: #AAA;
+	border-color: #CCC;
 	border-width: 1px;
 	padding: 5px;
 	margin: 0px;
